# GrowSmart

./: .gitignore  README.md  connectiontest.py  pyproject.toml
airflow/: Dockerfile  README.md  docker-compose.yaml  kafka-docker-compose.yaml  requirements.txt
airflow/dags/: AirflowAWSWeather.py  AirflowAWSWeatherFormatted.py  AirflowAWSWeather_Persistent.py  GrowSmart_Joint_sources.py  GrowSmart_final.py  Plants_Formatted.py  Test_Plants_Formatted copy.py  create_graph_csv.py  iot_devices_data_collector.py  iot_devices_formatted.py  iot_devices_persistent_data_collector.py  iot_sencors_formatted.py  iot_snapshots_data_generator.py  plant_traints_data_collector.py  plant_traits_persistent_data_collector.py  test_of_plants.py  weather_data_collector.py
airflow/dags/iot-devices/: device.py
airflow/dags/spark-scripts/: process_s3_formatted.py
kafka/: docker-compose.yaml
notebooks/: Graph Machine Learning Model Proof of Concept.ipynb  GraphExplorationGrowsSmart.ipynb  Lily_Dashboard_queries.ipynb  model.pth  sample-edges.csv  sample-results.csv  sample.csv
spark/: DockerfileMaster  DockerfileWorker  docker-compose.yaml  start_worker.sh  wait-for-it.sh
spark/scripts/: bulkloader.py  iot_devices_consumer.py  process_s3_formatted.py  test.py
spark/scripts/lambda/: lambda_function.py
spark/scripts/lambda/charset_normalizer-3.1.0.dist-info/: RECORD
sparkjobs/: review_plant_traits_schema.py
