[tool.poetry]
name = "growsmart"
version = "0.1.0"
description = "Codebase for the GrowSmart company project."
authors = ["Alfredo León, Liliia Aliakberova, Satria Bagus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.99"
awscli = "^1.27.99"
apache-airflow = {extras = ["amazon"], version = "^2.5.2"}
black = "^23.1.0"
autopep8 = "^2.0.2"
pandas = "^1.5.3"
pyspark = "^3.3.2"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
