[tool.poetry]
name = "growsmart"
version = "0.1.0"
description = "Codebase for the GrowSmart company project."
authors = ["Alfredo León, Liliia Aliakberova, Satria Bagus"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.99"
apache-airflow = {extras = ["amazon"], version = "^2.5.2"}
black = "^23.1.0"
autopep8 = "^2.0.2"
pandas = "^1.5.3"
apache-airflow-providers-apache-spark = "^4.0.1"
awscli = "^1.27.110"
s3fs = "<=0.4"
fastparquet = "^2023.2.0"
python-dotenv = "^1.0.0"
confluent-kafka = "^2.1.1"
findspark = "^2.0.1"
kafka-python = "^2.0.2"
pyspark = "3.3.1"
pyprobables = "^0.5.8"
pyarrow = "^12.0.0"
elasticsearch = "^8.8.0"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
